Updates so far - 10-02-19

--- a/carly/index.html
+++ b/carly/index.html
@@ -15,16 +15,29 @@
         <link rel="stylesheet" href="dist/css/carly.css" />
     </head>
     <body>
+        <div id="hero" class="full-width">
+            <div class="container">
+                <div class="row">
+                    <section id="heroText" class="col-12">
+                        <h1>My hero</h1>
+                        <h2>Next text</h2>
+                    </section>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div id="orderEg" class="row">
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+            </div>
+        </div>
+        
         <div class="container">
             <div class="row">
                 <section class="col-12">
-                    <p class="style-me">Create a bio page for a celebrity of your choice.</p>
-                    <ul class="style-me">
-                        <li>- The page needs to be responsive</li>
-                        <li>- Use bootstrap4 classes where possible</li>
-                    </ul>
-
-                    <h1>Celebrity name here.</h1>
+                    <h1>My hero</h1>
+                    <h2>Next text</h2>
                 </section>
             </div>
             <div class="row">
