--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <h3>Pages:</h3>
                 <ul class="list-unstyled">
                     <li><a href="/carly/index.html">Carly</a></li>
+                    <li><a href="/carly2/index.html">Carly2</a></li>
                 </ul>
             </div>
         </div>
